--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,5 @@
-baseURL = 'http://localhost:1313/'
+#baseURL = 'http://localhost:1313/'
+baseURL = 'https://btorb.github.io/btn-advisory.ch/'
 languageCode = 'en-us'
 title = 'BTN Advisory'
 
