update hugo.toml to ignore bear-theme baseof, part 2

--- a/hugo.toml
+++ b/hugo.toml
@@ -47,5 +47,7 @@ title = 'BTN Advisory'
     weight = 5
 
 ignoreFiles = [
-  "themes/hugo-bearblog/layouts/_default/baseof.html"
+  "themes/hugo-bearblog/layouts/_default/baseof.html",
+  "themes/hugo-bearblog/layouts/partials/header.html",
+  "themes/hugo-bearblog/layouts/partials/footer.html"
 ]
