--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://btorb.github.io/btn-advisory.ch/'
+baseURL = "https://btorb.github.io/btn-advisory.ch/"  # notice the double quotes and trailing slash
 languageCode = 'en-us'
 title = 'BTN Advisory'
 
