Update toml and github workflow to fix link on github

--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = 'http://localhost:1313/btn-advisory.ch/'
+baseURL = '/' # 'http://localhost:1313/btn-advisory.ch/'
 languageCode = 'en-us'
 title = 'BTN Advisory'
 
