--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -25,7 +25,7 @@ jobs:
           hugo-version: 'latest'
           extended: true
       - name: Build
-        run: hugo --minify -baseURL "https://btorb.github.io/btn-advisory.ch/"
+        run: hugo --minify --baseURL "https://btorb.github.io/btn-advisory.ch/"
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
