--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -1,4 +1,4 @@
-name: Deploy Hugo site to Pages with baseURL, no slash
+name: Deploy Hugo site to Pages
 
 on:
   push:
@@ -25,7 +25,7 @@ jobs:
           hugo-version: 'latest'
           extended: true
       - name: Build
-        run: hugo --minify --baseURL "https://btorb.github.io/btn-advisory.ch"
+        run: hugo --minify
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
