Configure for btn-advisory.ch

--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,6 @@
-baseURL = 'https://btorb.github.io/btn-advisory.ch'  # no trailing slash, local: '/'
+#baseURL = 'https://btorb.github.io/btn-advisory.ch'  # no trailing slash, local: '/'
+baseURL = 'https://btn-advisory.ch'
+
 languageCode = 'en-us'
 title = 'BTN Advisory'
 
